# openAV-Luppp

./: .ajsnapshot  .clang-format  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  FIXME  HACKING  INSTALL  PACKAGING  README  README.md  TODO  Tupfile  archive.sh  debug.sh  fixTup.sh  luppp5apc.ajs  meson.build  meson_options.txt  nonSeqLupppCCintegration.patch  run.sh  scrapeFixme.sh  test.sh  valgrind.sh  version.sh  waf  wscript
buildTest/: compile.sh  tup.config
extra/: .luppprc  luppprc  seq24map.txt  seq24mapVertical.txt
gcc/: ctlra_test.c  event.h  luppp_script_api.h
planning/: bg.c  header.c  luppp.c  settings.c
resources/controllers/: Quneo.ctlr  akai_apc.ctlr  akai_apc_key25.ctrl  akai_apc_mini.ctlr  launchpad_s.ctlr  test.c  transport_test.ctlr
resources/icons/: icon.xcf
resources/mappa/: z1_mappa.ini
resources/metadata/: luppp.appdata.xml  luppp.desktop
src/: CMakeLists.txt  Tupfile  audiobuffer.cpp  audiobuffer.cxx  audiobuffer.hpp  audiobuffer.hxx  audiofileloader.cpp  audiofileloader.hpp  audioprocessor.hxx  audioqueue.cpp  audioqueue.hpp  audiosink.hpp  audiosinkoutput.cpp  audiosinkoutput.hpp  audiosource.cpp  audiosource.hpp  audiotrack.cpp  audiotrack.hpp  automove.hpp  backtrack.hpp  beatsmash.cpp  beatsmash.hpp  bufferaudiosource.cpp  bufferaudiosource.hpp  bufferaudiosourcestate.hpp  buffers.hxx  clipselectorstate.hpp  clipselectorstate.hpp.gch  config.hxx  controller.cpp  controller.hpp  controllerupdater.cxx  controllerupdater.hxx  debug.cxx  debug.hxx  denormals.hxx  diskreader.cxx  diskreader.hxx  diskwriter.cxx  diskwriter.hxx  (+166 more)
src/avtk/: Tupfile  avtk_background.h  avtk_box.h  avtk_button.h  avtk_clip_selector.h  avtk_dial.h  avtk_image.h  avtk_light_button.h  avtk_radial_status.h  avtk_reverb.h  avtk_sidechain_gain.h  avtk_unit.h  avtk_volume.h  bindings.cxx  bindings.h  clipselector.cxx  clipselector.hxx  hotkeydialog.cxx  hotkeydialog.hxx  meson.build  volume.cxx  volume.hxx  waveform.h
src/cjson/: Tupfile  meson.build
src/controller/: README_ctlrscript  apc.cxx  apc.hxx  binding.hxx  controller.cxx  controller.hxx  ctlra.cxx  ctlra.hxx  ctlrscript.cxx  ctlrscript.hxx  ctlrscript_api.h  genericJson.cfg  genericmidi.cxx  genericmidi.hxx  gui.cxx  gui.hxx  guicontroller.cxx  guicontroller.hxx  luppp_script_api.h  meson.build  nonseq.cxx  nonseq.hxx
src/dsp/: Tupfile  dsp_dbmeter.hxx  dsp_reverb.hxx  dsp_sidechain_gain.cxx  dsp_sidechain_gain.hxx  meson.build
src/libjson/: JSONOptions.h
src/libjson/_internal/TestSuite/TestSuite.xcodeproj/xcuserdata/wallace.xcuserdatad/: ._xcschemes
src/observer/: meson.build  midi.cxx  midi.hxx  observer.hxx  time.cxx  time.hxx
src/resources/: luppp.prfs
src/save/: save.cxx  save.hxx  saveable.cxx  saveable.hxx
src/state/: Tupfile  meson.build  state.cxx  state.hxx  stately.cxx  stately.hxx
src/tests/: Tupfile  diskreadertest.cxx  diskwritertest.cxx  goptionstest.cxx  gridlogictests.cxx  meson.build  qunit.hxx
src/tests/lupppTestMaterial/: akai_apc.ctlr  audio.cfg  testController.cfg
src/tests/lupppTestMaterial/lupppTest/: session.luppp
